# marketing-agents

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai_utm_qa_agent/: README.md  __init__.py  utm_qa_agent.py  utm_taxonomy.json
ai_utm_qa_agent/examples/: sample_inputs.md
anomaly_pacing_agent/: README.md  __init__.py  anomaly_pacing_agent.py  pacing_plan.json
docs/: ANOMALY_PACING_AGENT_DIAGRAM.md  ARCHITECTURE_OVERVIEW.md  RAG_INSIGHT_AGENT_DIAGRAM.md  UTM_QA_AGENT_DIAGRAM.md
rag_campaign_insight_agent/: README.md  __init__.py  campaign_history.json  kpi_dictionary.yaml  rag_campaign_insight_agent.py
shared/: __init__.py  llm.py
tests/: __init__.py  conftest.py  test_anomaly_pacing_agent.py  test_rag_campaign_insight_agent.py  test_utm_qa_agent.py
